--- a/web.css
+++ b/web.css
@@ -100,6 +100,9 @@ body {
 }
 
 @media screen and (max-width: 450px) {
+  body {
+    background: linear-gradient(to bottom, #56ccf4, #bdddec);
+  }
   .head {
     font-size: 20px;
   }
