--- a/web.css
+++ b/web.css
@@ -102,6 +102,7 @@ body {
 @media screen and (max-width: 450px) {
   body {
     background: linear-gradient(to bottom, #56ccf4, #bdddec);
+    height: auto;
   }
   .head {
     font-size: 20px;
