--- a/web.css
+++ b/web.css
@@ -101,8 +101,7 @@ body {
 
 @media screen and (max-width: 450px) {
   body {
-    background: linear-gradient(to bottom, #56ccf4, #bdddec);
-    height: 100%;
+    background: none;
   }
   .head {
     font-size: 20px;
